
  * Allow the DPC+ scheme to not enable playfield 'jitter' effect for
    certain older DPC+ driver versions; this allows 'Epic Adventure' ROM
    to finally work in Stella.

  * Certain buttons in the UI can now be activated repeatedly by holding
    down the mouse button (Time Machine, debugger step/trace/frame advance,
    etc.)

  * PNG/ZIP image support is now conditionally compiled into Stella.
    All major ports (Linux/macOS/Windows) have it enabled by default.

  * SDL/GUI support is now conditionally compiled into Stella.  All major
    ports (Linux/macOS/Windows) have it enabled by default.  This is
    currently needed by the libretro port.

  * Updated included PNG library to latest stable version.

-Have fun!


5.1.3 to 6.0: (December 23, 2018)

  * Note: because of major TIA sound changes, the state file format has
          changed, and old state files will not work with this release.

  * New cycle exact audio core based on work by Chris Brenner (crispy);
    greatly improved audio emulation accuracy (i.e. E.T., Ms. Pacman).

  * Full rewrite of the audio subsystem; resample TIA output to target
    sample rate directly in Stella.

  * Added option to force stereo sound for all ROMs, or to use the
    setting on a per-ROM basis.

  * Threading: decouple emulation from frame rendering.

  * Main loop rewritten; emulating speed and timing is now much more
    faithful (i.e. speed in Pick'n'Pile).

  * Added preliminary support for 'CTY' bankswitching scheme and recently
    released 'Chetiry' ROMs.  Special thanks to SpiceWare for adding music
    support to this scheme.

  * UI modernization (new widget look, dialog titles added, dialogs
    refactored).

  * The bankswitch scheme can now be forced by naming the ROM with a
    specific extension (ie: .f8s for F8SC, .fe for FE, etc).  The
    supported extensions are the same as the ones from HarmonyCart and
    UnoCart.

  * Audio settings replaced with new 'audio.xxx' settings.
