@@ -3678,47 +3678,47 @@ Ms Pac-Man (Stella extended codes):
       are not fully supported in the debugger:
       <table cellpadding="2" border="1">
         <tr><th>&nbsp;Type&nbsp;</th><th>Description</th><th>File Extension<br>(to force type)</th></tr>
-        <tr><td>0840 </td><td>8K ECONObanking </td><td>.084 </td></tr>
+        <tr><td>0840 </td><td>8K ECONObanking </td><td>.084, .0840</td></tr>
         <tr><td>2IN1 &#185;</td><td>4-32K Multicart (2 games) </td><td>.2N1 </td></tr>
         <tr><td>4IN1 &#185;</td><td>8-32K Multicart (4 games) </td><td>.4N1 </td></tr>
         <tr><td>8IN1 &#185;</td><td>16-64K Multicart (8 games) </td><td>.8N1 </td></tr>
-        <tr><td>16IN1 &#185;</td><td>32-128K Multicart (16 games) </td><td>.16N </td></tr>
-        <tr><td>32IN1 &#185;</td><td>64-128K Multicart (32 games) </td><td>.32N </td></tr>
-        <tr><td>64IN1 &#185;</td><td>64/128K Multicart </td><td>.64N </td></tr>
-        <tr><td>128IN1 &#185;</td><td>256/512K Multicart </td><td>.128 </td></tr>
+        <tr><td>16IN1 &#185;</td><td>32-128K Multicart (16 games) </td><td>.16N, 16N1 </td></tr>
+        <tr><td>32IN1 &#185;</td><td>64-128K Multicart (32 games) </td><td>.32N, .32N1 </td></tr>
+        <tr><td>64IN1 &#185;</td><td>64/128K Multicart </td><td>.64N, .64N1 </td></tr>
+        <tr><td>128IN1 &#185;</td><td>256/512K Multicart </td><td>.128, .128N1 </td></tr>
         <tr><td>2K </td><td>64-2048 byte Atari </td><td>.2K </td></tr>
         <tr><td>3E </td><td>32K Tigervision </td><td>.3E </td></tr>
-        <tr><td>3E+ </td><td>3E+ (TJ modified DASH) </td><td>.3EP </td></tr>
+        <tr><td>3E+ </td><td>3E+ (TJ modified DASH) </td><td>.3EP, .3E+ </td></tr>
         <tr><td>3F </td><td>512K Tigervision </td><td>.3F </td></tr>
-        <tr><td>4A50 &#178;</td><td>64K 4A50 + ram </td><td>.4A5 </td></tr>
+        <tr><td>4A50 &#178;</td><td>64K 4A50 + ram </td><td>.4A5, .4A50 </td></tr>
         <tr><td>4K </td><td>4K Atari </td><td>.4K </td></tr>
-        <tr><td>4KSC </td><td>CPUWIZ 4K + ram </td><td>.4KS </td></tr>
+        <tr><td>4KSC </td><td>CPUWIZ 4K + ram </td><td>.4KS, .4KSC </td></tr>
         <tr><td>AR </td><td>Supercharger </td><td>.AR </td></tr>
         <tr><td>BF </td><td>CPUWIZ 256K </td><td>.BF </td></tr>
-        <tr><td>BFSC </td><td>CPUWIZ 256K + ram</td><td>.BFS </td></tr>
+        <tr><td>BFSC </td><td>CPUWIZ 256K + ram</td><td>.BFS, .BFSC </td></tr>
         <tr><td>BUS </td><td>Experimental</td><td>.BUS </td></tr>
         <tr><td>CDF </td><td>Chris, Darrell, Fred</td><td>.CDF </td></tr>
         <tr><td>CM &#185;</td><td>Spectravideo CompuMate </td><td>.CM </td></tr>
         <tr><td>CTY &#178;</td><td>CDW - Chetiry </td><td>.CTY </td></tr>
         <tr><td>CV </td><td>Commavid extra ram </td><td>.CV </td></tr>
         <tr><td>CV+ </td><td>Extended Commavid extra ram</td><td>.CVP </td></tr>
-        <tr><td>DASH </td><td>Boulder Dash 2 </td><td>.DAS </td></tr>
+        <tr><td>DASH </td><td>Boulder Dash 2 </td><td>.DAS, .DASH </td></tr>
         <tr><td>DF </td><td>CPUWIZ 128K </td><td>.DF </td></tr>
-        <tr><td>DFSC </td><td>CPUWIZ 128K + ram</td><td>.DFS </td></tr>
+        <tr><td>DFSC </td><td>CPUWIZ 128K + ram</td><td>.DFS, .DFSC </td></tr>
         <tr><td>DPC </td><td>Pitfall II </td><td>.DPC </td></tr>
-        <tr><td>DPC+</td><td>Enhanced DPC </td><td>.DPP </td></tr>
+        <tr><td>DPC+</td><td>Enhanced DPC </td><td>.DPP, .DPC+ </td></tr>
         <tr><td>E0 </td><td>8K Parker Bros </td><td>.E0 </td></tr>
         <tr><td>E7 </td><td>16K M-network </td><td>.E7 </td></tr>
-        <tr><td>E78K </td><td>8K M-network </td><td>.E78 </td></tr>
+        <tr><td>E78K </td><td>8K M-network </td><td>.E78, .E78K </td></tr>
         <tr><td>EF </td><td>64K Homestar Runner </td><td>.EF </td></tr>
-        <tr><td>EFSC </td><td>64K Homestar Runner + ram</td><td>.EFS </td></tr>
+        <tr><td>EFSC </td><td>64K Homestar Runner + ram</td><td>.EFS, .EFSC </td></tr>
         <tr><td>F0 </td><td>Dynacom Megaboy </td><td>.F0 </td></tr>
         <tr><td>F4 </td><td>32K Atari </td><td>.F4 </td></tr>
-        <tr><td>F4SC </td><td>32K Atari + ram </td><td>.F4S </td></tr>
+        <tr><td>F4SC </td><td>32K Atari + ram </td><td>.F4S, .F4SC </td></tr>
         <tr><td>F6 </td><td>16K Atari </td><td>.F6 </td></tr>
-        <tr><td>F6SC </td><td>16K Atari + ram </td><td>.F6S </td></tr>
+        <tr><td>F6SC </td><td>16K Atari + ram </td><td>.F6S, .F6SC </td></tr>
         <tr><td>F8 </td><td>8K Atari </td><td>.F8 </td></tr>
-        <tr><td>F8SC </td><td>8K Atari + ram </td><td>.F8S </td></tr>
+        <tr><td>F8SC </td><td>8K Atari + ram </td><td>.F8S, .F8SC </td></tr>
         <tr><td>FA </td><td>CBS RAM Plus </td><td>.FA </td></tr>
         <tr><td>FA2 </td><td>CBS RAM Plus 24/28K </td><td>.FA2 </td></tr>
         <tr><td>FE </td><td>8K Decathlon </td><td>.FE </td></tr>
